--- a/aptq.html
+++ b/aptq.html
@@ -1,70 +1,63 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
-  <link rel="stylesheet" href="navigationbar.css">
-  <link rel="stylesheet" href="aptqs.css">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css\aptqs.css">
+    <link rel="stylesheet" href="css\mainstyle.css">
+    <!-- <!-- <link rel="stylesheet" href="navigationbar.css"> -->    
+    <style>
+        table{
+            top: 1000%;
+            left: 100%;
+        }
+    </style>
 </head>
-<body>
-    <div>
-        <div class="sm">
-            <a href="aptq.html">AptitudeQuestions</a>
-            <a href="perq.html">PersnalityQuestions</a>
-            <a href="#">JobDetails</a>
-            <a href="index.html">Logout</a>
-          </div>
-          <div class="sm">
-            <a href="addjobdetails.html">AddJobDetails</a>
-          </div>
-          <div class="sm">
-            <a href="requirementdetails.html">AddRequirementdetails</a>
-          </div>
-          <div class="sm">
-            <a href="uploadcv.html">Uploadpreferedcvs</a>
-          </div>
-          <div class="sm">
-            <a href="viewaptq.html">ShowAptitudeQuestions</a>
-          </div>
-          <div class="sm">
-          <a href="viewperq.html">ShowPersnalityQuestions</a>
-          </div>
-          <div class="sm">
-          <a href="viewjobdetails.html">ShowJobDetails</a>
-          </div>
-
-    <form class="box" action="#" method="post">
-    <h1 align="center">Aptitude Questions</h1>
-    <div align="center">
-        <label>Type:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="type" required>
-            <option value="none">Choose One</option>
-            <option value="programming">programming</option>
-            <option value="maths">maths</option>
-            <option value="English">English</option>
-        </select>
-    </div><br><br>
-    <div align="center">
-        <label>Questions:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<textarea name="que" rows="5" cols="50" required placeholder="Write your question here"></textarea>
-    </div><br><br>
-    <div align="center">
-        <label>Option1:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op1" required>
-    </div><br><br>
-    <div align="center">
-        <label>Option2:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op2" required>
-    </div><br><br>    
-    <div align="center">
-        <label>Option3:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op3" required>
-    </div><br><br>
-    <div align="center">
-        <label>Option4:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op4" required>
-    </div><br><br><br>
-    <div align="center">
-        <label>Answer:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="Ans" required>
-    </div><br><br><br>
-    <div align="center">
-        <input type="submit" name="add" value="Add">
-    </div>
-</form>
+<body> 
+    <nav class="menu">
+    <header>Close<span>X</span></header>
+    <ol>
+        <li class="menu-item"><a href="#0">Aptitude Questions</a></li>
+        <li class="menu-item"><a href="perq.html">Personality Questions</a></li>
+        <li class="menu-item">
+            <a href="#0">Job Details</a>
+            <ol class="sub-menu">
+                <li class="menu-item"><a href="addjobdetails.html">AddJobDetails</a></li>
+                <li class="menu-item"><a href="requirementdetails.html">AddRequirementdetails</a></li>
+                <li class="menu-item"><a href="uploadcv.html">Uploadpreferedcvs</a></li>
+            </ol>
+        </li>
+        <li class="menu-item">
+            <a href="#0">View</a>
+            <ol class="sub-menu">
+                <li class="menu-item"><a href="viewaptq.html">ShowAptitudeQuestions</a></li>
+                <li class="menu-item"><a href="viewperq.html">ShowPersnalityQuestions</a></li>
+                <li class="menu-item"><a href="viewjobdetails.html">ShowJobDetails</a></li>
+            </ol>
+        </li>
+        <li class="menu-item"><a href="index.html">Logout</a></li>
+    </ol>
+    <footer><button aria-label="Toggle Menu">Toggle</button></footer>
+</nav> 
+<form class="box" id="form1">
+  <h1>Aptitude Questions</h1>
+      <label>Type:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="type" required>
+          <option value="none">Choose One</option>
+          <option value="programming">programming</option>
+          <option value="maths">maths</option>
+          <option value="English">English</option>
+      </select>
+        <br><br>
+      <label>Questions:</label><textarea id="que" rows="5" cols="50" required placeholder="Write your question here"></textarea>
+       <label>Option1:</label><input type="text" id="op1" name="op1" required>
+      <label>Option2:</label><input type="text" id="op2" name="op2" required>
+      <label>Option3:</label><input type="text"  id="op3 name="op3" required>
+      <label>Option4:</label><input type="text" id="op4" name="op4" required>
+      <label>Answer:</label><input type="text" id="Ans" name="Ans" required>
+      <input type="submit" name="add" value="Add">
+  </div>
+  </form>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script src="js/navbar.js"></script>
+<script src="js/addaptitudeque.js"></script>
 </body>
-
 </html>
