--- a/reg.html
+++ b/reg.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>َRegisration Form</title>
-    <link rel="stylesheet" href="regs.css">
+    <link rel="stylesheet" href="css\regs.css">
 </head>
 <body>
     <form class="box" action="user.html" method="post">
@@ -11,28 +11,15 @@
             <a href="user.html">Sign in</a>
         </div>
         <h1 align="center">Registration</h1>
-        <div align="center">
-            <div>
-                <h1>Name:</h1><input type="text" name="name" size="30" required>
-            </div>
-            <div>
-                <h1>Email Id:</h1><input type="email" name="email" size="30" required>
-            </div>
-            <div >
-                <h1>Mobilenumber:</h1> <input type="number" name="mnum" pattern="[6789][0-9]{9}" size="30" required>
-            </div>
-            <div >
-                <h1>Username:</h1> <input type="text" name="uname" size="30" required>
-            </div>
-            <div >
-                <h1>Password:</h1> <input type="password" name="pswd" size="30"required>
-            </div>
-            <div >
-                <h1>Cvs:</h1> <input type="file" name="files" multiple required>
-            </div><br>
-            <div >
-                <input type="submit" value="upload" name="submit">
-            </div>
+        <h1>Name:</h1><input type="text" name="name" size="30" required>
+        <h1>Email Id:</h1><input type="email" name="email" size="30" required>
+        <h1>Mobilenumber:</h1> <input type="tel" name="mnum" pattern="[6789][0-9]{9}" size="30" required>
+        <h1>Username:</h1> <input type="text" name="uname" size="30" required>
+        <h1>Password:</h1> <input type="password" name="pswd" size="30"required>
+        <h1>Cvs:</h1><input type="file" name="files" multiple required>
+        <input type="submit" value="upload" name="submit">
+        <div class="fakefile">
+            <img src="arrow.jpg" height="50" />
         </div>
     </form>
 </body> 
