--- a/viewjobdetails.html
+++ b/viewjobdetails.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <script src="js/bootstrap_js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css\aptqs.css">
     <style>
         .box{
             width: 900px;
             top: 50%;
             left: 60%;
-            background: none;
         }
         h1{
-            background-color: black;
+            /* background-color: black; */
             margin: auto;
             width: 500px;
             padding: 10px;
@@ -17,7 +20,7 @@
             
         }
         td{ 
-            color: rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
             width: 100px;
             padding: 0 0 0;        
         }
@@ -52,7 +55,7 @@
     </nav>
     <form action="#" class="box" method="post">
         <h1 align="center">Job Details</h1>
-        <table border="1" align="center">
+        <table class="table">
             <tr>
                 <td>JOB ID</td> 
                 <td colspan="10">Designation</td>
