--- a/viewperq.html
+++ b/viewperq.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <script src="js/bootstrap_js/bootstrap.min.js"></script>
     <title></title>
     <link rel="stylesheet" href="css\aptqs.css">
     <style>
@@ -50,7 +54,7 @@
     </nav>
     <form action="#" class="box" method="post">
         <h1 align="center">Personality Questions</h1>
-        <table border="1" align="center">
+        <table class="table">
             <tr>
                 <td>1</td>
                 <td colspan="10"> 	
